--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
