--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=meteorology-by-zip-code
+spring.datasource.url=jdbc:h2:mem:meteorology
+spring.datasource.username=alan
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
